top-chrome slide: set shown ratio for main frame widget only

Opening a drop-down menu in a webpage will create a new
RenderWidget with a new LayerTreeHostImpl, whose value
of the top_controls_shown_ratio_ (initialized to 0) will
be pushed to the browser when a new compositor frame is
generated. This will cause top-chrome to hide briefly
on opening the menu which will result in closing the
menu immediately.

This CL fixes the issue by allowing only the main frame
widget to set the shown ratio.

BUG=891471
TEST=Manual, added a new browser test.

Change-Id: I8ead7f903d56e68523a7654abc21aa6e5ca7b690
Reviewed-on: https://chromium-review.googlesource.com/c/1258348
Reviewed-by: David Bokan <bokan@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597146}
Former-commit-id: faa32d27c2b6851e86f309417cdfc6c6c2e97872