content/browser/renderer_host/render_widget_host_delegate.h
@@ -58,7 +58,9 @@ class CONTENT_EXPORT RenderWidgetHostDelegate {
  public:
   // Functions for controlling the browser top controls slide behavior with page
   // gesture scrolling.
-  virtual void SetTopControlsShownRatio(float ratio) {}
+  virtual void SetTopControlsShownRatio(
+      RenderWidgetHostImpl* render_widget_host,
+      float ratio) {}
   virtual bool DoBrowserControlsShrinkRendererSize() const;
   virtual int GetTopControlsHeight() const;
   virtual void SetTopControlsGestureScrollInProgress(bool in_progress) {}
